--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
+    "ios": "react-native run-ios",
+    "android": "react-native run-android",
     "test": "jest",
     "tsc": "tsc"
   },
   "dependencies": {
     "react": "16.6.3",
-    "react-native": "0.58.0"
+    "react-native": "0.58.0",
+    "react-native-sentry": "^0.40.3"
   },
   "devDependencies": {
     "@types/jest": "^23.3.13",
