--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "ios": "react-native run-ios",
+    "ios:release": "react-native run-ios --configuration Release",
     "android": "react-native run-android",
+    "android:release": "react-native run-android --configuration Release",
     "test": "jest",
     "tsc": "tsc"
   },
